<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/edtCalculate"
        android:layout_weight="0.05"
        android:textAlignment="viewEnd"
        android:textSize="24dp"
        android:text="@string/txtOperations"
        android:singleLine="false"
        android:gravity="right" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtResult"
        android:layout_weight="0.05"
        android:textAlignment="viewEnd"
        android:layout_gravity="center_horizontal"
        android:textSize="28dp"
        android:text="@string/txtResult"
        android:textIsSelectable="false"
        android:gravity="right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="0.10"
        android:weightSum="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnPlus"
            android:id="@+id/btnPlus"
            android:layout_weight="0.25"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnLess"
            android:id="@+id/btnLess"
            android:layout_weight="0.25"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnMultiply"
            android:id="@+id/btnMultiply"
            android:layout_weight="0.25"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnDivide"
            android:id="@+id/btnDivide"
            android:layout_weight="0.25"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnNine"
            android:id="@+id/btnNine"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnEight"
            android:id="@+id/btnEight"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnSeven"
            android:id="@+id/btnSeven"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnSix"
            android:id="@+id/btnSix"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnFive"
            android:id="@+id/btnFive"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnFour"
            android:id="@+id/btnFour"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btntThree"
            android:id="@+id/btnThree"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnTwo"
            android:id="@+id/btnTwo"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnOne"
            android:id="@+id/btnOne"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10" >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnClear"
            android:id="@+id/btnClear"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnCero"
            android:id="@+id/btnCero"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnPoint"
            android:id="@+id/btnPoint"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="30"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculate"
        android:id="@+id/btnCalculate"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:textSize="22dp" />

</LinearLayout>
